# jet_ml

./: .gitignore  Data.xlsx  README.md  pyproject.toml
src/jet_ml/: __init__.py  modeling.py  preprocess.py  utils.py
src/jet_ml/Datasets/: datasets.py
src/jet_ml/assemble/: __init__.py
src/jet_ml/plots/: plot_configs.py  plots.py
